kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crm-app
  labels:
    name: crm-app
    app: crm-application
    environment: production
